# nicolor

./: CMakeLists.txt  Makefile  README.md  main.cpp  nicolor.cpp  nicolor.h  tests.cpp
lib/: nicolor.cpp  nicolor.h
